# fastapi-tdd-docker

./: .gitignore  FastAPI TDD.code-workspace  README.md  docker-compose.yml
.github/workflows/: main.yml
project/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  entrypoint.sh  lesson.pgsql  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
project/app/: config.py  db.py  main.py  summarizer.py
project/app/api/: crud.py  ping.py  summaries.py
project/app/models/: tortoise.py
project/tests/: conftest.py  ping_test.py  summaries_test.py  summaries_unit_test.py
