[tool.poetry]
name = "fastapi-tdd"
version = "0.1.0"
description = "FastAPI project from testdriven.io"
authors = ["Victor Brazhnikov <nort87@mail.ru>"]
readme = "README.md"
packages = [{include = "fastapi_tdd"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.85.1"
uvicorn = "0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
