[tool.poetry]
name = "fastapi-tdd"
version = "0.1.0"
description = "FastAPI project from testdriven.io"
authors = ["Victor Brazhnikov <nort87@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.85.1"
uvicorn = "0.19.0"
asyncpg = "^0.27.0"
tortoise-orm = "^0.19.2"
python-rapidjson = "^1.9"
ciso8601 = "^2.3.0"
aerich = "^0.7.1"
pytest = "^7.2.1"
httpx = "^0.23.3"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
