[tool.poetry]
name = "fastapi-tdd"
version = "0.1.0"
description = "FastAPI project from testdriven.io"
authors = ["Victor Brazhnikov <nort87@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.110.0"
asyncpg = "^0.29.0"
tortoise-orm = "^0.20.0"
python-rapidjson = "^1.9"
ciso8601 = "^2.3.0"
aerich = "^0.7.1"
pytest = "^7.2.1"
pytest-cov = "^4.1.0"
httpx = {extras = ["cli"], version = "^0.27.0"}
gunicorn = "^21.0.1"
uvicorn = {extras = ["standard"], version = "^0.26"}
anyio = "^3"
flake8 = "^4"
isort = "^5.12.0"
orjson = "^3.9.15"
pydantic-settings = "^2.2.1"
pytest-xdist = "^3.5.0"
newspaper3k = "^0.2.8"
blue = "^0.9.1"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.blue]
line-length = 88
target-version = ["py310"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.isort]
split_on_trailing_comma = true
line_length = 88
